[metadata]
name = stactools-gap
version = 0.0.1
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
description = stactools subpackage for the USGS Gap Analysis Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gadomski/stactools-gap
project_urls =
    Bug Tracker = https://github.com/gadomski/stactools-gap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src